bodhilibrs_frompyo3/tests/ui/error-unsupported-struct-attr-format-1.stderr
error: expected `=`
 --> tests/ui/error-unsupported-struct-attr-format-1.rs:4:16
  |
4 | #[frompyo3(name)]
  |                ^
